--- a/askama_actix/Cargo.toml
+++ b/askama_actix/Cargo.toml
@@ -14,11 +14,13 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-actix-web = { version = "4.0.0-beta.10", default-features = false }
+# actix-web = { version = "4.0.0-beta.14", default-features = false }
+actix-web = { git = "https://github.com/pashinin/actix-web.git", branch = "version-fix", package = "actix-web" }
 askama = { version = "0.11.0-beta.1", path = "../askama", default-features = false, features = ["with-actix-web", "mime", "mime_guess"] }
 bytes = { version = "1" }
 futures-util = { version = "0.3" }
 
 [dev-dependencies]
 actix-rt = { version = "2", default-features = false }
-actix-test = "0.1.0-beta.5"
+# actix-test = "0.1.0-beta.8"
+actix-test = { git = "https://github.com/pashinin/actix-web.git", branch = "version-fix", package = "actix-test" }
